--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -20,7 +20,6 @@
   background-color: #FFFFFF; /* Green */
   border: none;
   text-decoration: none;
-  display: inline-block;
 }
 
 .tabs-header {
